apps/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: '*'
    http:
      paths:
      - path: /b
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
